--- a/feedback-collection-backend/src/main/resources/application.properties
+++ b/feedback-collection-backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=feedback-collection-backend
 # MongoDB Configuration
-spring.data.mongodb.uri=${MONGO_URI}
+#spring.data.mongodb.uri=${MONGO_URI}
+spring.data.mongodb.uri=mongodb+srv://saumyas2w:9319352013%40Ss@feedback-cluster.jivkvbc.mongodb.net/feedbackdb?retryWrites=true&w=majority&appName=Feedback-Cluster
 spring.data.mongodb.database=feedbackdb
 
 # Server Port (optional, default is 8080)
